[workspace]

members = [
    "api",
    "branch_rs",
    "db",
    "facebook",
    "globee",
    "http",
    "tari-client",
    "stripe",
    "logging",
    "macros",
    "customer_io",
    "cache",
    "domain_events",
    "communications",
    "db_connections",
    "config",
    "errors",
    "payments",
    "locators",
]

[patch.crates-io]
diesel_derives = {git="https://github.com/mikethetike/diesel", branch="r2d2-transaction-check"}
diesel = {git="https://github.com/mikethetike/diesel", branch="r2d2-transaction-check"}
r2d2 = {git="https://github.com/sfackler/r2d2", rev="0e030197acefd6234cdf64099aa16e705a40175f"}