[package]
name = "cache"
version = "0.2.0"
authors = ["toiletspider <dan4rie@gmail.com>"]
edition = "2018"

[dependencies]
redis = "0.15"
deadpool-redis = "0.5"
deadpool = "0.5"
chrono = {version = "0.4", features = ["serde"]}
async-trait = "0.1"
tokio = { version = "0.2", features = ["macros", "rt-core", "time"] }
