[package]
name = "customer_io"
version = "0.1.0"
authors = ["toiletspider <dan4rie@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.6", features = ["serde", "v4"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
url = "2.1.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive-error="0.0.4"
logging={path="../logging"}
log = "0.4"