[package]
name = "sharetribe_flex"
version = "0.1.0"
authors = ["Mike Berry <mikethetike@tari.com>"]
edition = "2018"


[dependencies]
snafu = "0.6.2"
chrono = {version="0.4.10", features=["serde"]}
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
reqwest = { version="0.10", features=["blocking", "json"] }
uuid = { version = "0.6", features = ["serde", "v4"] }

[dev-dependencies]
serde_urlencoded="0.6.1"